--- a/styles.css
+++ b/styles.css
@@ -233,3 +233,30 @@ footer a:hover {
   font-style: normal;
   font-size: 30px;
 }
+
+
+/*--------------------------------------------------------------
+Temporal Pop Up for empty portfolio
+--------------------------------------------------------------*/
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-content {
+    background-color: #f1f1f1;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #ffffff;
+    width: 80%;
+    font-family: "Quicksand", sans-serif;
+    font-weight: bold;
+    text-align: center;
+}
